--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -154,3 +154,13 @@ footer {
   padding: 24px;
   text-align: center;
 }
+
+/*media queries*/
+@media (min-width: 700px) {
+  :root {
+    -bg-url: url(./assets/bg-desktop.jpg);
+  }
+  .light {
+    -bg-url: url(./assets/bg-desktop-light);
+  }
+}
